Fix horizontal scroll when panel is off-screen

--- a/scss/_layouts_application.scss
+++ b/scss/_layouts_application.scss
@@ -49,6 +49,7 @@ $application-layout--side-nav-width-expanded: 15rem !default;
     grid-template-columns: min-content minmax(0, 1fr) minmax(0, min-content);
     grid-template-rows: min-content 1fr min-content;
     height: 100vh;
+    overflow: hidden; // make sure panels transformed off-screen don't make the layout scroll
     width: 100vw;
   }
 
